feat: add client questions

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Converra – Performance-Based Revenue Partners for SaaS & Tech</title>
+    <meta name="description" content="Converra helps SaaS and tech companies convert warm leads into predictable revenue. No retainers. Shared revenue model." />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
